--- a/1.md
+++ b/1.md
@@ -1,5 +1,5 @@
 # Two Sum
-(Click Here)[https://leetcode.com/problems/two-sum/description/]
+[Click Here](https://leetcode.com/problems/two-sum/description/)
 
 **JAVA SOLUTION:**
 ```
